Update and rename JavaEnhancedForLoop.java to JavaEnhancedForLoopEx.java